<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="130dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app_title"
            android:textSize="50sp"
            android:id="@+id/textView"
            android:gravity="center"
            android:layout_gravity="center"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/forpas"
            android:textColor="#000000"
            android:hint="@string/resetpasshint"
            android:layout_marginTop="20dp"
            android:singleLine="true"
            android:minWidth="250dp"
            />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:id="@+id/respass"
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            android:minWidth="280dp"
            android:background="#000000"
            android:textColor="#ffffff" />

    </LinearLayout>



</LinearLayout>