<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="130dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app_title"
            android:textSize="50sp"
            android:id="@+id/textView"
            android:gravity="center"
            android:layout_gravity="center"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_user"
            android:contentDescription="@string/username"
            android:layout_gravity="center"/>

        <EditText
            android:autoText="false"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="10dip"
            android:singleLine="true"
            android:id="@+id/etUsername"
            android:hint="@string/username"
            android:layout_gravity="center"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@mipmap/ic_email"
            android:contentDescription="@string/email"
            android:layout_gravity="center"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="10dip"
            android:hint="@string/email"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:id="@+id/etEmail"
            android:layout_gravity="center_vertical"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_password"
            android:contentDescription="@string/password"
            android:layout_gravity="center_vertical"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/password"
                android:singleLine="true"
                android:inputType="textPassword"
                android:id="@+id/etPassword"
                />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="10dip"
                android:hint="@string/passwordConfirm"
                android:singleLine="true"
                android:inputType="textPassword"
                android:id="@+id/etPasswordConf" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:id="@+id/ibConfirmReg"
            android:src="@mipmap/ic_ok"
            android:background="#000000"
            android:scaleType="fitCenter"
            android:minWidth="280dp"/>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/haveAccount"
            android:id="@+id/tvSignIn"
            android:gravity="center"
            android:layout_gravity="center" />
    </LinearLayout>

</LinearLayout>